google places API key added

--- a/timesreviews.ipynb
+++ b/timesreviews.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "key = open('APIkeys.txt', 'r')"
+    "key = open('APIkeys.txt', 'r')\n",
+    "goog_key = open('google_places_api_key.txt', 'r')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,68 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = keys[0].split()[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "page = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = f'https://api.nytimes.com/svc/search/v2/articlesearch.json?q=Pete Wells&fq=news_desk:(Dining) AND type_of_material:(Review)&page={page}&api-key={api_key}'\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = requests.get(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "json_data = r.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'2015-06-09T16:03:49+0000'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 91
-    }
-   ],
-   "source": [
-    "r.json()['response']['docs'][6]['pub_date']"
+    "api_key = keys[0].split()[2]\n",
+    "goog_api_key = list(goog_key)[0][11:-1]"
    ]
   },
   {
@@ -463,6 +408,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Re run function with glocation set to new york city? Filter out national reviews, 29 and under and briefs. Critic's notebook?\n",
+    "\n",
+    "Try using Google Maps API or webscraping to see if restaurants are closed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 99,
    "metadata": {},
    "outputs": [],
@@ -598,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,6 +859,26 @@
    ],
    "source": [
     "[i for i in df.restaurants if 'brief' in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['29cheap']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
+   "source": [
+    "[i for i in df.restaurants if '29' in i]"
    ]
   },
   {
