Googlemaps library added, successful query

--- a/timesreviews.ipynb
+++ b/timesreviews.ipynb
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 186
     }
    ],
    "source": [
@@ -879,6 +879,119 @@
    ],
    "source": [
     "[i for i in df.restaurants if '29' in i]"
+   ]
+  },
+  {
+   "source": [
+    "import googlemaps\n",
+    "from datetime import datetime\n",
+    "\n",
+    "gmaps = googlemaps.Client(key=goog_api_key)\n",
+    "\n",
+    "# Geocoding an address\n",
+    "geocode_result = gmaps.geocode('1600 Amphitheatre Parkway, Mountain View, CA')\n",
+    "\n",
+    "# Look up an address with reverse geocoding\n",
+    "reverse_geocode_result = gmaps.reverse_geocode((40.714224, -73.961452))\n",
+    "\n",
+    "# Request directions via public transit\n",
+    "now = datetime.now()\n",
+    "directions_result = gmaps.directions(\"Sydney Town Hall\",\n",
+    "                                     \"Parramatta, NSW\",\n",
+    "                                     mode=\"transit\",\n",
+    "                                     departure_time=now)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 168,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request = {\n",
+    "  query : 'Contra NYC',\n",
+    "  fields: ['business_status', 'place_id', 'formatted_address']\n",
+    "  }\n",
+    "\n",
+    "service = google.maps.places.PlacesService(map)\n",
+    "service.getDetails(request, callback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmaps = googlemaps.Client(key=goog_api_key)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'candidates': [{'business_status': 'OPERATIONAL',\n",
+       "   'formatted_address': '138 Orchard St, New York, NY 10002, United States',\n",
+       "   'place_id': 'ChIJT1joy4ZZwokRQOu1I_pG85Q'}],\n",
+       " 'status': 'OK'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 183
+    }
+   ],
+   "source": [
+    "gmaps.find_place('Contra NYC', input_type= 'textquery', fields = ['business_status', 'place_id', 'formatted_address'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns = 'Unnamed: 0', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.set_index('Unnamed: 0.1', inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'candidates': [{'business_status': 'OPERATIONAL',\n",
+       "   'formatted_address': '123 Nassau St, New York, NY 10038, United States',\n",
+       "   'place_id': 'ChIJq6r-exhawokRKgBzzPkn57U'}],\n",
+       " 'status': 'OK'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 195
+    }
+   ],
+   "source": [
+    "gmaps.find_place(df['restaurants'][10], input_type= 'textquery', fields = ['business_status', 'place_id', 'formatted_address'])"
    ]
   },
   {
