Google Maps csv added

--- a/timesreviews.ipynb
+++ b/timesreviews.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import time"
+    "import time\n",
+    "import googlemaps"
    ]
   },
   {
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,27 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'https://www.nytimes.com/2012/05/09/dining/reviews/frej-brooklyn-restaurant-review.html'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 188
-    }
-   ],
+   "outputs": [],
    "source": [
-    "nytimes_query(api_key, 'Pete Wells', news_desk = 'Dining', type_of_material = 'Review', n_page = 2)[0]['web_url']"
+    "gmaps = googlemaps.Client(key=goog_api_key)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,12 +548,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('restaurants.csv')"
+    "# df.to_csv('restaurants.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,15 +913,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gmaps = googlemaps.Client(key=goog_api_key)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 183,
    "metadata": {},
    "outputs": [
@@ -955,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,25 +954,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'candidates': [{'business_status': 'OPERATIONAL',\n",
-       "   'formatted_address': '123 Nassau St, New York, NY 10038, United States',\n",
-       "   'place_id': 'ChIJq6r-exhawokRKgBzzPkn57U'}],\n",
+       "                                                                       urls  \\\n",
+       "Unnamed: 0.1                                                                  \n",
+       "2021-03-01T18:03:31+0000  https://www.nytimes.com/2021/03/01/dining/winn...   \n",
+       "2021-02-12T18:36:55+0000  https://www.nytimes.com/2021/02/12/dining/fala...   \n",
+       "2020-12-01T17:44:20+0000  https://www.nytimes.com/2020/12/01/dining/ayat...   \n",
+       "2020-11-23T18:00:37+0000  https://www.nytimes.com/2020/11/23/dining/bila...   \n",
+       "2020-11-10T17:12:25+0000  https://www.nytimes.com/2020/11/10/dining/silv...   \n",
+       "\n",
+       "                                       restaurants  stars  \n",
+       "Unnamed: 0.1                                               \n",
+       "2021-03-01T18:03:31+0000                   winner       0  \n",
+       "2021-02-12T18:36:55+0000  falansai vietnamese food      0  \n",
+       "2020-12-01T17:44:20+0000     ayat palestinian food      0  \n",
+       "2020-11-23T18:00:37+0000                     bilao      0  \n",
+       "2020-11-10T17:12:25+0000            silver apricot      0  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>urls</th>\n      <th>restaurants</th>\n      <th>stars</th>\n    </tr>\n    <tr>\n      <th>Unnamed: 0.1</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-03-01T18:03:31+0000</th>\n      <td>https://www.nytimes.com/2021/03/01/dining/winn...</td>\n      <td>winner</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2021-02-12T18:36:55+0000</th>\n      <td>https://www.nytimes.com/2021/02/12/dining/fala...</td>\n      <td>falansai vietnamese food</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2020-12-01T17:44:20+0000</th>\n      <td>https://www.nytimes.com/2020/12/01/dining/ayat...</td>\n      <td>ayat palestinian food</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2020-11-23T18:00:37+0000</th>\n      <td>https://www.nytimes.com/2020/11/23/dining/bila...</td>\n      <td>bilao</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2020-11-10T17:12:25+0000</th>\n      <td>https://www.nytimes.com/2020/11/10/dining/silv...</td>\n      <td>silver apricot</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'candidates': [{'business_status': 'CLOSED_TEMPORARILY',\n",
+       "   'formatted_address': '81-19, Broadway, NY 11373, United States',\n",
+       "   'place_id': 'ChIJdcuSjVJfwokRZ0w4TUXCA_g'}],\n",
        " 'status': 'OK'}"
       ]
      },
      "metadata": {},
-     "execution_count": 195
+     "execution_count": 16
     }
    ],
    "source": [
-    "gmaps.find_place(df['restaurants'][10], input_type= 'textquery', fields = ['business_status', 'place_id', 'formatted_address'])"
+    "gmaps.find_place(df['restaurants'][290] + 'NYC', input_type= 'textquery', fields = ['business_status', 'place_id', 'formatted_address'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'thai cook '"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 203
+    }
+   ],
+   "source": [
+    "df['restaurants'][290]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rest_info(rest_name, rest_location, fields = [], googlemap_object):\n",
+    "    return googlemap_object.find_place(rest_name, '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dct = {}\n",
+    "for i in list(df.restaurants):\n",
+    "    dct.update({i : gmaps.find_place(i + ' NYC', input_type='textquery', fields = ['name', 'business_status', 'place_id', 'formatted_address'] )})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "business_status = []\n",
+    "formatted_address = []\n",
+    "name = []\n",
+    "place_id = []\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in dct:\n",
+    "    try:\n",
+    "        business_status.append(dct[i]['candidates'][0]['business_status'])\n",
+    "        formatted_address.append(dct[i]['candidates'][0]['formatted_address'])\n",
+    "        name.append(dct[i]['candidates'][0]['name'])\n",
+    "        place_id.append(dct[i]['candidates'][0]['place_id'])\n",
+    "    except IndexError:\n",
+    "        continue\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.DataFrame({'status': business_status, 'address':formatted_address, 'name':name, 'place_id': place_id})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_csv('gmaps.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'23dinbriefs': {'candidates': [], 'status': 'ZERO_RESULTS'},\n",
+       " 'frej brooklyn ': {'candidates': [{'business_status': 'CLOSED_PERMANENTLY',\n",
+       "    'formatted_address': '90 Wythe Ave, Brooklyn, NY 11249, United States',\n",
+       "    'name': 'Frej',\n",
+       "    'place_id': 'ChIJzXBUSV1ZwokR9hxlX-kCvk8'}],\n",
+       "  'status': 'OK'},\n",
+       " '31brief 002': {'candidates': [], 'status': 'ZERO_RESULTS'},\n",
+       " '19dinbriefs 2': {'candidates': [], 'status': 'ZERO_RESULTS'},\n",
+       " 'wines for thanksgiving mixing without trying to match': {'candidates': [{'business_status': 'OPERATIONAL',\n",
+       "    'formatted_address': '79715 CA-111, La Quinta, CA 92253, United States',\n",
+       "    'name': 'BevMo!',\n",
+       "    'place_id': 'ChIJGxzItlX42oARRBMp8C7t1QY'}],\n",
+       "  'status': 'OK'},\n",
+       " 'allswell nyc ': {'candidates': [{'business_status': 'OPERATIONAL',\n",
+       "    'formatted_address': '124 Bedford Ave, Brooklyn, NY 11211, United States',\n",
+       "    'name': 'Allswell',\n",
+       "    'place_id': 'ChIJa7Bx-1xZwokRLAsf1yepN3Y'}],\n",
+       "  'status': 'OK'},\n",
+       " 'indian accent ': {'candidates': [{'business_status': 'OPERATIONAL',\n",
+       "    'formatted_address': '123 W 56th St, New York, NY 10019, United States',\n",
+       "    'name': 'Indian Accent',\n",
+       "    'place_id': 'ChIJ5zM53_lYwokREUcpQkveG1w'}],\n",
+       "  'status': 'OK'},\n",
+       " 'shoji at 69 leonard street': {'candidates': [{'business_status': 'OPERATIONAL',\n",
+       "    'formatted_address': '69 Leonard St, New York, NY 10013, United States',\n",
+       "    'name': 'Shoji at 69 Leonard Street',\n",
+       "    'place_id': 'ChIJnbEEPiBawokRN3BGCWpw2nE'}],\n",
+       "  'status': 'OK'},\n",
+       " 'onegin nyc ': {'candidates': [{'business_status': 'CLOSED_PERMANENTLY',\n",
+       "    'formatted_address': '391 6th Ave, New York, NY 10014, United States',\n",
+       "    'name': 'Onegin',\n",
+       "    'place_id': 'ChIJfTa2r5ZZwokRovMXB0zmFR8'}],\n",
+       "  'status': 'OK'},\n",
+       " '30brief 001': {'candidates': [], 'status': 'ZERO_RESULTS'}}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "source": [
+    "dct"
    ]
   },
   {
