Maps function update to align indices

--- a/timesreviews.ipynb
+++ b/timesreviews.ipynb
@@ -1071,7 +1071,25 @@
     "        name.append(dct[i]['candidates'][0]['name'])\n",
     "        place_id.append(dct[i]['candidates'][0]['place_id'])\n",
     "    except IndexError:\n",
-    "        continue\n"
+    "        business_status.append(np.NaN)\n",
+    "        formatted_address.append(np.NaN)\n",
+    "        name.append(np.NaN)\n",
+    "        place_id.append(np.NaN)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gmaps_dataframe(list_of_restaurants, fields, gmaps_obj):\n",
+    "    dct = {}\n",
+    "    for i in list_of_restaurants:\n",
+    "        dct.update({i : gmaps.find_place(i + ' NYC', input_type='textquery', fields = fields)})\n",
+    "    for i in fields:\n",
+    "        i = []\n",
+    "    "
    ]
   },
   {
